--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "dependencies": {
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
-    "react-color": "^2.1.0",
-    "react-dom": "^15.0.2",
-    "react-tap-event-plugin": "^1.0.0",
-    "reactcss": "^0.4.5"
+    "react-dom": "^15.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
