--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clipboard": "^1.5.10",
     "css-loader": "^0.23.1",
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
