--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server --progress --colors -d"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-tabs": "^0.6.0",
     "style-loader": "^0.13.1"
   },
   "devDependencies": {
