--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "aframe-react",
+  "name": "aframe-editor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors -d"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Fernando Serrano",
+  "license": "MIT",
   "dependencies": {
     "aframe": "^0.2.0",
     "babel-core": "^6.10.4",
     "clipboard": "^1.5.12",
     "css-loader": "^0.23.1",
-    "material-ui": "^0.15.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-tabs": "^0.6.0",
     "style-loader": "^0.13.1"
   },
   "devDependencies": {
