--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors -d --open",
-    "build": "webpack --progress --colors -p"
+    "build": "webpack --progress --colors -p",
+    "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages",
+    "ghpages": "npm run preghpages && shx cp -r build example gh-pages && node ./scripts/gh-pages"
   },
   "repository": "aframevr/aframe-editor",
   "license": "MIT",
@@ -18,6 +20,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "gh-pages": "^0.11.0",
+    "open": "0.0.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "style-loader": "^0.13.1",
