--- a/.eslintrc
+++ b/.eslintrc
@@ -27,9 +27,12 @@
     "AFRAME": true,
     "THREE": true
   },
+  "parser": "babel-eslint",
   "parserOptions": {,
+    "ecmaVersion": 7,
     "sourceType": "module",
     "ecmaFeatures": {
+      "classes": true,
       "jsx": true,
       "experimentalObjectRestSpread": true
      }
