extend from standard linter (with semicolons)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,13 @@
 {
+  "extends": ["eslint:recommended", "plugin:react/recommended", "standard"],
   "rules": {
-    "indent": [
-      2,
-      2
-    ],
-    "quotes": [
-      2,
-      "single"
-    ],
-    "linebreak-style": [
-      2,
-      "unix"
-    ],
-    "semi": [
-      2,
-      "always"
-    ]
+    "semi": [2, "always"]
   },
   "env": {
     "es6": true,
     "browser": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "globals": {
     "AFRAME": true,
     "THREE": true
