--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.0.1",
+    "eslint": "^2.9.x",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-standard": "^1.3.2",
     "gh-pages": "^0.11.0",
     "open": "0.0.5",
     "react": "^15.1.0",
