--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clipboard": "^1.5.12"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
@@ -30,6 +31,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "gh-pages": "^0.11.0",
     "open": "0.0.5",
+    "postcss-loader": "^0.9.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "style-loader": "^0.13.1",
