--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "An editor for A-Frame scenes.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors -d --open",
-    "build": "webpack --progress --colors -p",
+    "build": "NODE_ENV=production webpack --progress --colors -p",
+    "ghpages": "npm run preghpages && node ./scripts/gh-pages",
     "lint": "npm run lintfile src/",
     "lintfile": "node --harmony node_modules/.bin/eslint",
-    "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages",
-    "ghpages": "npm run preghpages && shx cp -r build example gh-pages && node ./scripts/gh-pages"
+    "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r build example index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/example/index.html",
+    "start": "NODE_ENV=dev webpack-dev-server --progress --colors --hot -d --open"
   },
   "repository": "aframevr/aframe-editor",
   "license": "MIT",
@@ -32,9 +32,11 @@
     "eslint-plugin-standard": "^1.3.2",
     "gh-pages": "^0.11.0",
     "open": "0.0.5",
+    "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "shx": "^0.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
