--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "clipboard": "^1.5.12",
+    "lodash.debounce": "^4.0.6",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   },
