--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "repository": "aframevr/aframe-editor",
   "license": "MIT",
   "dependencies": {
-    "clipboard": "^1.5.12"
+    "classnames": "^2.2.5",
+    "clipboard": "^1.5.12",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
@@ -24,7 +27,6 @@
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.x",
     "eslint-config-standard": "^5.3.1",
@@ -35,8 +37,6 @@
     "open": "0.0.5",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
     "shx": "^0.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
