--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "aframe-inspector",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "An inspector for A-Frame scenes.",
-  "main": "index.js",
+  "main": "dist/aframe-inspector.min.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress --colors -p",
+    "build": "cross-env webpack --progress --colors",
+    "dist": "npm run dist:max && npm run dist:min",
+    "dist:max": "AFRAME_DIST=true npm run build",
+    "dist:min": "NODE_ENV=production AFRAME_DIST=true npm run build",
     "ghpages": "npm run preghpages && node ./scripts/gh-pages",
     "lint": "npm run lintfile src/",
     "lintfile": "node --harmony node_modules/.bin/eslint",
-    "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r build example index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/example/index.html",
+    "preghpages": "npm run dist:min && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r dist example index.html gh-pages && mv gh-pages/dist gh-pages/build && shx sed -i http://localhost:3333 .. gh-pages/example/index.html && shx sed -i ../build/aframe-inspector.js build/aframe-inspector.min.js gh-pages/example/index.html",
     "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors --hot -d --open"
   },
   "repository": "aframevr/aframe-inspector",
