--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash.debounce": "^4.0.6",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-select": "^1.0.0-beta14"
+    "react-select": "^1.0.0-rc.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
