--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "gh-pages": "^0.11.0",
     "jest": "^16.0.1",
+    "object-assign": "^4.1.0",
     "open": "0.0.5",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
