--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "clipboard": "^1.5.12",
+    "invariant": "^2.2.2",
     "lodash.debounce": "^4.0.6",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
