Added cross-env for dist, and remove --open

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "cross-env webpack --progress --colors",
     "deploy": "npm run ghpages",
     "dist": "npm run dist:max && npm run dist:min",
-    "dist:max": "AFRAME_DIST=true npm run build",
-    "dist:min": "NODE_ENV=production AFRAME_DIST=true npm run build",
+    "dist:max": "cross-env AFRAME_DIST=true npm run build",
+    "dist:min": "cross-env NODE_ENV=production AFRAME_DIST=true npm run build",
     "ghpages": "npm run preghpages && node ./scripts/gh-pages",
     "lint": "npm run lintfile src/",
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "node --harmony node_modules/.bin/eslint",
     "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist example index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/example/index.html",
-    "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors --hot -d --open --host 0.0.0.0",
+    "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors --hot -d --host 0.0.0.0",
     "test": "jest --watch",
     "test:ci": "jest"
   },
