--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,9 +1,12 @@
 {
   "extends": "stylelint-config-standard",
+  "plugins": [
+    "stylelint-order"
+  ],
   "rules": {
     "selector-type-no-unknown": [true,
       "ignoreTypes": ["a-scene", "a-entity"]
     ],
-    "declaration-block-properties-order": "alphabetical"
+    "order/properties-alphabetical-order": true
   }
 }
