--- a/package.json
+++ b/package.json
@@ -21,26 +21,17 @@
   "repository": "aframevr/aframe-inspector",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "clipboard": "^1.5.12",
-    "invariant": "^2.2.2",
-    "lodash.debounce": "^4.0.6",
-    "prop-types": "^15.6.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-file-reader-input": "^1.1.4",
-    "react-select": "^1.0.0-rc.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
+    "autoprefixer": "^9.4.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.0",
     "babel-jest": "^16.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "cross-env": "^2.0.0",
+    "classnames": "^2.2.5",
+    "clipboard": "^1.5.12",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.x",
     "eslint-config-standard": "^5.3.1",
@@ -49,20 +40,27 @@
     "eslint-plugin-standard": "^1.3.2",
     "gh-pages": "^0.11.0",
     "gm": "^1.23.0",
+    "invariant": "^2.2.2",
     "jest": "^16.0.1",
+    "lodash.debounce": "^4.0.6",
     "object-assign": "^4.1.0",
     "open": "0.0.5",
-    "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
+    "prop-types": "^15.6.0",
     "react": "^15.3.2",
+    "react-dom": "^15.3.0",
+    "react-file-reader-input": "^1.1.4",
+    "react-select": "^1.0.0-rc.1",
     "react-test-renderer": "^15.3.2",
     "shx": "^0.1.2",
     "style-loader": "^0.13.1",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.6.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.15.1"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.11.2"
   },
   "keywords": [
     "3d",
@@ -76,5 +74,8 @@
     "virtualreality",
     "webvr",
     "wysiwyg"
-  ]
+  ],
+  "devDependencies": {
+    "postcss-import": "^8.0.2"
+  }
 }
