--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist": "npm run dist:max && npm run dist:min",
     "dist:max": "cross-env AFRAME_DIST=true npm run build",
     "dist:min": "cross-env NODE_ENV=production AFRAME_DIST=true npm run build",
-    "ghpages": "npm run preghpages && node ./scripts/gh-pages",
+    "ghpages": "npm run preghpages && ghpages -p gh-pages",
     "lint": "npm run lintfile src/",
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "node --harmony node_modules/.bin/eslint",
@@ -38,7 +38,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
-    "gh-pages": "^0.11.0",
+    "ghpages": "0.0.10",
     "gm": "^1.23.0",
     "invariant": "^2.2.2",
     "jest": "^16.0.1",
