--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.0",
     "react-file-reader-input": "^1.1.4",
-    "react-select": "^1.0.0-rc.1",
+    "react-select": "^2.1.2",
     "react-test-renderer": "^15.3.2",
     "shx": "^0.1.2",
     "style-loader": "^0.13.1",
