--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "aframe-inspector",
-  "version": "0.8.6",
+  "version": "0.8.10",
   "description": "A visual inspector tool for A-Frame.",
   "main": "dist/aframe-inspector.min.js",
   "scripts": {
-    "build": "cross-env webpack --progress --colors",
+    "build": "NODE_ENV=production cross-env webpack --progress --colors",
     "deploy": "npm run ghpages",
     "dist": "npm run dist:max && npm run dist:min",
     "dist:max": "cross-env AFRAME_DIST=true npm run build",
-    "dist:min": "cross-env NODE_ENV=production AFRAME_DIST=true npm run build",
+    "dist:min": "cross-env MINIFY=true AFRAME_DIST=true npm run build",
     "ghpages": "npm run preghpages && ghpages -p gh-pages",
     "lint": "npm run lintfile src/",
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "node --harmony node_modules/.bin/eslint",
-    "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist example sindex.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
+    "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist examples index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
+    "prepublish": "npm run dist",
     "prettier": "prettier --single-quote es5 --write 'src/**/*.js'",
     "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors -d --host 0.0.0.0",
     "test": "jest --watch",
