--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "plugins": ["transform-class-properties"],
-  "presets": ["es2015", "react"]
+  "presets": [["env", { exclude: ["transform-es2015-classes"] }], "react"]
 }
