--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "babel-eslint": "^6.1.0",
     "babel-jest": "^16.0.0",
     "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
     "clipboard": "^1.5.12",
     "cross-env": "^5.2.0",
