--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "stylelint-order": "^0.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.11.2"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.5"
   },
   "keywords": [
     "3d",
@@ -79,6 +79,7 @@
     "wysiwyg"
   ],
   "devDependencies": {
-    "postcss-import": "^8.0.2"
+    "postcss-import": "^8.0.2",
+    "terser-webpack-plugin-legacy": "^1.2.5"
   }
 }
