--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "react/jsx-indent-props": [2, 2],
     "semi": [2, "always"],
+    "space-before-function-paren": "off",
     "no-console": "off"
   },
   "env": {
