--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lintfile": "node --harmony node_modules/.bin/eslint",
     "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist examples index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
     "prepublish": "npm run dist",
-    "prettier": "prettier --single-quote es5 --write 'src/**/*.js'",
+    "prettier": "prettier --write 'src/**/*.js'",
     "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors -d --host 0.0.0.0",
     "test": "jest --watch",
     "test:ci": "jest"
