--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "plugins": ["transform-class-properties"],
-  "presets": [["env", { exclude: ["transform-es2015-classes"] }], "react"]
+  "presets": ["@babel/preset-env", ["@babel/preset-react", {"runtime": "automatic"}]]
 }
