--- a/package.json
+++ b/package.json
@@ -4,66 +4,61 @@
   "description": "A visual inspector tool for A-Frame.",
   "main": "dist/aframe-inspector.min.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress --colors",
+    "build": "webpack --progress",
     "deploy": "npm run ghpages",
     "dist": "npm run dist:max && npm run dist:min",
-    "dist:max": "cross-env AFRAME_DIST=true npm run build",
-    "dist:min": "cross-env MINIFY=true AFRAME_DIST=true npm run build",
+    "dist:max": "npm run build",
+    "dist:min": "cross-env MINIFY=true npm run build",
     "ghpages": "npm run preghpages && ghpages -p gh-pages",
     "lint": "npm run lintfile src/",
     "lint:css": "stylelint src/css/main.css",
-    "lintfile": "node --harmony node_modules/.bin/eslint",
+    "lintfile": "eslint",
     "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist examples index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
     "prepublish": "npm run dist",
     "prettier": "prettier --write 'src/**/*.js'",
-    "start": "cross-env NODE_ENV=dev webpack-dev-server --progress --colors -d --host 0.0.0.0",
+    "start": "webpack serve --progress -d eval-source-map",
     "test": "jest --watch",
     "test:ci": "jest"
   },
   "repository": "aframevr/aframe-inspector",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^9.4.2",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^6.1.0",
-    "babel-jest": "^16.0.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "classnames": "^2.2.5",
-    "clipboard": "^1.5.12",
-    "cross-env": "^5.2.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.x",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "^1.3.2",
+    "classnames": "^2.3.2",
+    "clipboard": "^2.0.11",
+    "lodash.debounce": "^4.0.8",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.4.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "7.19.1",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.17.12",
+    "babel-jest": "^29.1.2",
+    "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "ghpages": "0.0.10",
-    "gm": "^1.23.0",
-    "invariant": "^2.2.2",
-    "jest": "^16.0.1",
-    "lodash.debounce": "^4.0.6",
-    "object-assign": "^4.1.0",
-    "open": "0.0.5",
-    "postcss-loader": "^0.9.1",
+    "jest": "^29.1.2",
+    "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
-    "prop-types": "^15.6.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.0",
-    "react-file-reader-input": "^1.1.4",
-    "react-select": "^2.1.2",
-    "react-test-renderer": "^15.3.2",
-    "shx": "^0.1.2",
-    "style-loader": "^0.13.1",
-    "stylelint": "^8.0.0",
-    "stylelint-config-standard": "^17.0.0",
-    "stylelint-order": "^0.6.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "react-test-renderer": "^18.2.0",
+    "shx": "^0.2.2",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "keywords": [
     "3d",
@@ -77,9 +72,5 @@
     "virtualreality",
     "webvr",
     "wysiwyg"
-  ],
-  "devDependencies": {
-    "postcss-import": "^8.0.2",
-    "terser-webpack-plugin-legacy": "^1.2.5"
-  }
+  ]
 }
