--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "three": "0.145.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
