--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "eslint",
     "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist examples index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
+    "prepare": "husky install",
     "prepublish": "npm run dist",
     "prettier": "prettier --write 'src/**/*.js'",
     "start": "webpack serve --progress -d eval-source-map",
@@ -33,11 +34,11 @@
     "three": "0.145.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
     "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.17.12",
+    "autoprefixer": "^10.4.12",
     "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
@@ -46,7 +47,9 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-react": "^7.30.1",
     "ghpages": "0.0.10",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
+    "lint-staged": "^13.0.3",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "react-test-renderer": "^18.2.0",
@@ -73,5 +76,8 @@
     "virtualreality",
     "webvr",
     "wysiwyg"
-  ]
+  ],
+  "lint-staged": {
+    "*.js": "prettier --write"
+  }
 }
