Update all dependencies and fix react code warnings (#647)
* fix eslint errors with latest eslint version

* update code to latest react api

* update all dependencies, remove non used dependencies, properly separate devDependencies

* fresh package-lock.json

* revert to using the spread syntax

* ignore new rules

* React import not needed with new jsx runtime

* inline the svg in the js bundle

* define three as external to be able to import jsm file from three package

* add three dependency

* use GLTFExporter from three r145

* remove vendor/GLTFExporter.js

* format files on pre-commit

* update package-lock.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,20 @@
 {
-  "extends": ["eslint:recommended", "plugin:react/recommended", "standard"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime", "standard"],
   "rules": {
+    "multiline-ternary": "off",
+    "no-console": "off",
+    "no-lone-blocks": "off",
+    "no-var": "off",
+    "object-shorthand": "off",
+    "no-useless-return": "off",
+    "prefer-const": "off",
     "react/jsx-indent-props": [2, 2],
     "semi": [2, "always"],
-    "space-before-function-paren": "off",
-    "no-console": "off"
+    "space-before-function-paren": "off"
   },
   "env": {
-    "es6": true,
     "browser": true,
+    "es2021": true,
     "node": true
   },
   "globals": {
@@ -16,17 +22,20 @@
     "ga": true,
     "THREE": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 7,
-    "sourceType": "module",
     "ecmaFeatures": {
-      "classes": true,
-      "jsx": true,
-      "experimentalObjectRestSpread": true
-     }
+      "jsx": true
+     },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "plugins": [
     "react"
-  ]
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
