--- a/package.json
+++ b/package.json
@@ -31,39 +31,39 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.4.0",
-    "three": "0.145.0"
+    "react-select": "^5.8.0",
+    "three": "0.161.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/eslint-parser": "7.19.1",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.17.12",
-    "autoprefixer": "^10.4.12",
-    "babel-jest": "^29.1.2",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.18.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-react": "^7.30.1",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "ghpages": "0.0.10",
     "husky": "^8.0.1",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
     "lint-staged": "^13.0.3",
-    "postcss-loader": "^7.0.0",
-    "prettier": "^2.7.1",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
     "shx": "^0.3.4",
-    "style-loader": "^3.3.1",
-    "stylelint": "^14.13.0",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylus": "^0.59.0",
-    "stylus-loader": "^7.1.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "style-loader": "^3.3.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylus": "^0.62.0",
+    "stylus-loader": "^8.1.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "keywords": [
     "3d",
