--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepublish": "npm run dist",
     "prettier": "prettier --write 'src/**/*.js'",
     "start": "webpack serve --progress -d eval-source-map",
-    "test": "jest --watch",
-    "test:ci": "jest"
+    "test": "BABEL_ENV=testing jest --watch",
+    "test:ci": "BABEL_ENV=testing jest"
   },
   "repository": "aframevr/aframe-inspector",
   "license": "MIT",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "autoprefixer": "^10.4.17",
     "babel-jest": "^29.7.0",
