Don't transpile to ES5 (#772)
* Don't transpile to ES5, no need to support IE11

* run npm audit fix

* reintroduce @babel/preset-env just for one single test with jest

* Bump dist

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepublish": "npm run dist",
     "prettier": "prettier --write 'src/**/*.js'",
     "start": "webpack serve --progress -d eval-source-map",
-    "test": "jest --watch",
-    "test:ci": "jest"
+    "test": "BABEL_ENV=testing jest --watch",
+    "test:ci": "BABEL_ENV=testing jest"
   },
   "repository": "aframevr/aframe-inspector",
   "license": "MIT",
