--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["@babel/preset-env", ["@babel/preset-react", {"runtime": "automatic"}]]
+  "env": {
+    "testing": {
+      "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
+    }
+  },
+  "presets": [["@babel/preset-react", { "runtime": "automatic" }]]
 }
