use latest gh-pages command directly instead of non maintained wrapper ghpages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist": "npm run dist:max && npm run dist:min",
     "dist:max": "npm run build",
     "dist:min": "cross-env MINIFY=true npm run build",
-    "ghpages": "npm run preghpages && ghpages -p gh-pages",
+    "ghpages": "npm run preghpages && gh-pages -d gh-pages",
     "lint": "npm run lintfile src/",
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "eslint",
@@ -47,7 +47,7 @@
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "ghpages": "0.0.10",
+    "gh-pages": "^6.3.0",
     "husky": "^8.0.1",
     "jest": "^29.7.0",
     "lint-staged": "^13.0.3",
