--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:css": "stylelint src/css/main.css",
     "lintfile": "eslint",
     "preghpages": "npm run dist && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r assets dist examples index.html gh-pages && shx sed -i http://localhost:3333 .. gh-pages/examples/index.html",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublish": "npm run dist",
     "prettier": "prettier --write 'src/**/*.js'",
     "start": "webpack serve --progress -d eval-source-map",
@@ -48,9 +48,9 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.3.0",
-    "husky": "^8.0.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "^15.4.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
