--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.17",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
